# bic-dbt-sl-voice-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/langchain_openai_voice/: __init__.py  utils.py
src/server/: app.py  client.py  models.py  prompt.py  settings.py  tools.py  utils.py  vectorstore.py
src/server/static/: index.html
